# i3dr_SBRI-ros

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  package.xml
i3dr_SBRI_ros_WS/src/isi/isi_probe-ros/: CMakeLists.txt  package.xml
launch/: aruco_detect.launch  aruco_i3dr_stereo.launch  change_arcuo_set_map_tf.launch  mapping.launch  rosbag_play.launch  rosbag_record.launch  rosbag_recorder.launch  rosbag_recorder_fix_me.launch  rosbag_sbri_play.launch  test_aruco_set_map_tf.launch  test_localisation_camera.launch  ur10_SBRI_scan2.launch
src/: aruco_set_map_tf.py  set_tf_parent.py  simple_aruco_localisation_pseye_phobos_nuclear.py
