<?xml version="1.0"?>
<package format="2">

  <name>i3dr_sbri</name>
  <version>0.0.1</version>
  <description>
    Launchers for controlling SBRI
  </description>

  <maintainer email="bknight@i3drobotics.com">Ben Knight</maintainer>
  <author email="bknight@i3drobotics.com">Ben Knight</author>
  
  <license>MIT</license>

  <url type="website">http://i3drobotics.com/</url>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>xacro</depend>
  <depend>std_msgs</depend>

</package>
